--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ env:
 before_install:
   - nvm install $NODE_VERSION
   - npm install -g npm@6.1.0
+  - npm install -g n
+  - n stable
   - npm install -g bower@1.7.9
   - npm install -g gulp-cli@2.2.1
   - node -v
